--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -64,6 +64,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row">
+                                                                <marquee behavior="" direction=""><h4 style="color: blue;">wellcome to Iblog . join with us to become an author</h5></marquee>
                                 {% for post in posts %}
                                 <div class="col-12 col-md-6 col-xl-3 mb-4 cards">
                                     <div class="card mr-3">
